# nornir_f5

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
nornir_f5/: __init__.py
nornir_f5/plugins/: __init__.py
nornir_f5/plugins/connections/: __init__.py  f5.py
nornir_f5/plugins/tasks/: __init__.py  atc.py  cm.py
nornir_f5/plugins/tasks/bigip/: __init__.py
nornir_f5/plugins/tasks/bigip/cm/: __init__.py  config_sync.py  failover_status.py  sync_status.py
nornir_f5/plugins/tasks/bigip/shared/: __init__.py
nornir_f5/plugins/tasks/bigip/shared/file_transfer/: __init__.py  upload.py  uploads.py
nornir_f5/plugins/tasks/bigip/shared/iapp/: __init__.py  package_management_tasks.py
nornir_f5/plugins/tasks/bigip/sys/: __init__.py  version.py
nornir_f5/plugins/tasks/bigip/util/: __init__.py  unix_ls.py  unix_rm.py
tests/: config.yml  conftest.py  test_atc_tasks.py  test_bigip_cm_tasks.py  test_bigip_shared_tasks.py  test_bigip_sys_tasks.py  test_bigip_util_tasks.py  test_f5_connections.py  test_nornir_atc.py  test_nornir_cm.py  test_nornir_f5.py  test_readme.py
tests/declarations/atc/device/: basic.json
tests/declarations/atc/telemetry/: default_pull_consumer.json
tests/files/: myfile.txt
tests/inventory/: groups.yml  hosts.yml
tests/responses/atc/as3/: declaration_failed.json  declaration_successfully_submitted.json  simple_01.json  task_declaration_failed.json  task_declaration_is_invalid.json  task_failed.json  task_in_progress.json  task_no_change.json  task_success.json
tests/responses/atc/device/: task_no_change.json  task_processing.json  task_success.json  version_3.22.1.json
tests/responses/atc/telemetry/: failed.json
tests/responses/bigip/cm/: failover_status_active.json  failover_status_standby.json  sync_status_changes_pending.json  sync_status_disconnected.json  sync_status_in_sync.json  sync_status_not_all_devices_synced.json  sync_status_standalone.json
tests/responses/bigip/shared/authn/: login_fail.json  login_success.json
tests/responses/bigip/shared/iapp/: task_created.json  task_failed.json  task_finished.json  task_started.json  task_unknown.json
tests/responses/bigip/sys/: version_11.6.5.2.json  version_13.1.1.4.json
tests/responses/bigip/util/: list_found.json  list_not_found.json
