[tool.poetry]
authors = ["Eric Jacob <erjac77@gmail.com>"]
classifiers = [
  "Programming Language :: Python :: 3.6",
  "Topic :: System :: Networking",
]
description = "F5 plugins for Nornir"
documentation = "https://github.com/erjac77/nornir_f5"
homepage = "https://github.com/erjac77/nornir_f5"
keywords = ["nornir", "f5", "bigip", "automation", "as3"]
license = "Apache-2.0"
name = "nornir_f5"
readme = "README.md"
repository = "https://github.com/erjac77/nornir_f5"
version = "0.2.0"

[tool.poetry.urls]
Issues = "https://github.com/erjac77/nornir_f5/issues"
"Pull Requests" = "https://github.com/erjac77/nornir_f5/pulls"
Releases = "https://github.com/erjac77/nornir_f5/releases"

[tool.poetry.dependencies]
nornir = "^3.0.0"
packaging = "^20.8"
python = "^3.6"
requests = "^2.25.1"
requests-toolbelt = "^0.9.1"
urllib3 = "^1.26.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = "^5.4"
darglint = "^1.5.8"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.3.1"
flake8-docstrings = "^1.5.0"
flake8-eradicate = "^1.0.0"
flake8-isort = "^4.0.0"
flake8-pytest-style = "^1.3.0"
flake8-requirements = "^1.3.3"
nornir-utils = "^0.1.1"
pep8-naming = "^0.11.1"
pytest = "^6.2.2"
responses = "^0.12.1"

[tool.poetry.plugins."nornir.plugins.connections"]
"f5" = "nornir_f5.plugins.connections:F5iControlREST"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
exclude = '''
/(
  | \.git
  | \.github
  | \.idea
  | \.pytest_cache
  | \.venv
  | \.vscode
  | __pycache__
  | htmlcov
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py36']

[tool.coverage.run]
branch = true
source = ["nornir_f5"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.isort]
profile = "black"
src_paths = ["nornir_f5", "tests"]

[tool.pytest.ini_options]
addopts = "-ra -q"
minversion = "6.0"
testpaths = ["tests"]
