[tool.poetry]
authors = ["Eric Jacob <erjac77@gmail.com>"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: System :: Networking",
]
description = "F5 plugins for Nornir"
documentation = "https://github.com/erjac77/nornir_f5"
homepage = "https://github.com/erjac77/nornir_f5"
keywords = ["nornir", "f5", "bigip", "automation", "as3"]
license = "Apache-2.0"
name = "nornir_f5"
readme = "README.md"
repository = "https://github.com/erjac77/nornir_f5"
version = "0.6.1"

[tool.poetry.urls]
Issues = "https://github.com/erjac77/nornir_f5/issues"
"Pull Requests" = "https://github.com/erjac77/nornir_f5/pulls"
Releases = "https://github.com/erjac77/nornir_f5/releases"

[tool.poetry.dependencies]
nornir = "^3.3.0"
packaging = "^23.0"
python = "^3.7.2"
requests = "^2.28.2"
requests-toolbelt = "^0.10.1"
urllib3 = "^1.26.14"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
coverage = "^7.1.0"
darglint = "^1.8.1"
flake8 = "^5.0.4"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.2.13"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.10.1"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.4.0"
flake8-isort = "^6.0.0"
flake8-pytest-style = "^1.7.2"
flake8-requirements = "^1.7.7"
nornir-utils = "^0.2.0"
pep8-naming = "^0.13.3"
pytest = "^7.2.1"
responses = "^0.22.0"
typed-ast = "^1.5.4"

[tool.poetry.plugins."nornir.plugins.connections"]
"f5" = "nornir_f5.plugins.connections:F5RestClient"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
exclude = '''
/(
  | \.git
  | \.github
  | \.idea
  | \.pytest_cache
  | \.venv
  | \.vscode
  | __pycache__
  | htmlcov
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py36']

[tool.coverage.run]
branch = true
source = ["nornir_f5"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.isort]
profile = "black"
src_paths = ["nornir_f5", "tests"]

[tool.pytest.ini_options]
addopts = "-ra -q"
minversion = "6.0"
testpaths = ["tests"]
